# cpp_and_c_studies

./: CMakeLists.txt  README.md
src/: agenda.cpp  calc.cpp  fact.cpp
